--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,7 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>lang='en'
+    <header>
+        <link rel="stylesheet" href="index.css"/>
+    </header>
+</html>
