--- a/first/index.html
+++ b/first/index.html
@@ -1,7 +1,14 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
 <!DOCTYPE html>
-<html>lang='en'
-    <header>
+<html lang='en'>
+    <head>
         <link rel="stylesheet" href="index.css"/>
-    </header>
+        <link rel="stylesheet" href="""/>
+    <title>HTML Layout One</title>
+    </head>
+<body>
+<div class="top-gray-header"></div>
+<div class="bottom-darkgray-footer"></div>
+<div class="white-body"></div>
+</body>
 </html>
