--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,25 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang='en'>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0"
+        <title>HTML Layout Two</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <section class="top-container">
+            <div id="purple-rectangle"></div>
+            <div id="green-square"></div>
+            <div id="blue-circle"></div>
+        </section>
+        <section class="middle-container">
+            <div id="cream-box"></div>
+
+        </section>
+        <section class="bottom-container">
+            <p id="text">Hello Friends</p>
+        </section>
+    </body>
+</html>
