second layout final

--- a/second/index.html
+++ b/second/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0"
-        <title>HTML Layout Two</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="index.css">
+        <title>HTML Layout Two</title>
     </head>
     <body>
         <section class="top-container">
@@ -19,7 +19,7 @@
 
         </section>
         <section class="bottom-container">
-            <p id="text">Hello Friends</p>
+            <p id="text">Hello <br/>Friends</p>
         </section>
     </body>
 </html>
