--- a/first/index.html
+++ b/first/index.html
@@ -1,9 +1,9 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
 <!DOCTYPE html>
-<html lang='en'>
+<html>
     <head>
+        <link rel="stylesheet" href="reset.css"/>
         <link rel="stylesheet" href="index.css"/>
-        <link rel="stylesheet" href="""/>
     <title>HTML Layout One</title>
     </head>
 <body>
