--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,21 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=devide-width,initial-scale=1.0">
+        <link rel="stylesheet" href="index.css">
+        <title>HTML Layout Three</title>
+    </head>
+    <body>
+        <section class="gray-area">
+            <div id="square"></div>
+                    </section>
+        <section class="text-area">
+            <p id="text">Consider hiding the status bar -- and all other app UI -- while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it ( and the appropriate app UI ) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.</p>
+        </section>
+        <div class="row1"></div>
+        <div class="row2"></div>
+        <div class="row3"></div>
+        <div class="row4"></div>
+</html>
