--- a/second/index.html
+++ b/second/index.html
@@ -3,7 +3,7 @@
 <html lang='en'>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0"
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="index.css">
         <title>HTML Layout Two</title>
